updated the stlye to fix the overlaping issue on the search and clear button

--- a/assets/style.css
+++ b/assets/style.css
@@ -96,6 +96,8 @@ p#city-temp.city-temp {
 
 .section1 {
   display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
   justify-content: space-between;
   align-items: flex-start;
   background: rgba(0, 0, 0, 0.2);
